# navedge

./: .firebaserc  .gitignore  README.md  firebase.json  package-lock.json  package.json  pubspec.yaml  release.jks
.firebase/: hosting.cHVibGlj.cache
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  google-services.json  proguard-rules.pro
assets/: route.json  settings.json
assets/animations/: bell_ring.json  button_press.json  chatbot_greeting.json  chatbot_typing.json  error_cross.json  gold_badge_glow.json  loading_spinner.json  location_pin_drop.json  navigation_start.json  (+6 more)
backend/: CMakeLists.txt  README.md
backend/data/: chatbot_responses.json  settings.json  users.db  users.sql
backend/data/routes/: route_1.json  route_2.json
backend/include/algorithms/: bellman_ford.h  dijkstra.h  floyd_warshall.h  knapsack.h
backend/include/authentication/: clerk_auth.h
backend/include/chatbot/: chatbot.h
backend/include/map/: location_service.h  map_processor.h
backend/include/models/: chatbot_model.h  location_model.h  map_model.h  user_model.h
backend/include/routes/: router.h
backend/include/utils/: config.h  file_handler.h  logger.h  permission_handler.h  sound_service.h  storage_handler.h
backend/src/: .env.local  main.cpp  next.config.js  package-lock.json  package.json
backend/src/.next/: trace
backend/src/.next/cache/: .rscinfo
backend/src/.next/cache/webpack/client-development/: index.pack.gz.old
backend/src/.next/cache/webpack/client-development-fallback/: index.pack.gz.old
backend/src/.next/cache/webpack/edge-server-development/: index.pack.gz.old
backend/src/.next/cache/webpack/server-development/: index.pack.gz.old
backend/src/.next/server/: server-reference-manifest.json
backend/src/app/: layout.tsx
backend/src/core/algorithms/: bellman_ford.cpp  dijkstra.cpp  floyd_warshall.cpp  knapsack.cpp
backend/src/core/authentication/: clerk_auth.cpp
backend/src/core/chatbot/: chatbot.cpp
backend/src/core/map/: location_service.cpp  map_processor.cpp
backend/src/core/utils/: config.cpp  file_handler.cpp  logger.cpp  permission_handler.cpp  sound_service.cpp  storage_handler.cpp
backend/src/models/: chatbot_model.cpp  location_model.cpp  map_model.cpp  user_model.cpp
backend/src/routes/: route_manager.cpp  route_manager.h  router.cpp
backend/src/styles/: globals.css
dataconnect/: dataconnect.yaml
functions/: index.js  package-lock.json
google_api_proxy/: package-lock.json  package.json  server.js  start_proxy.sh
ios/: Podfile
lib/: app.dart  firebase_options.dart  main.dart  settings.dart  user_data_provider.dart
linux/: CMakeLists.txt
navedge0248/: index.js  package.json
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+83 files in other folders)
